--- a/legion-of-eternity/index.html
+++ b/legion-of-eternity/index.html
@@ -7,7 +7,7 @@ title: Zuurix.com - Legion of Eternity
 <h1>Legion of Eternity</h1>
 	
 <a href="https://i.imgur.com/hlCAh04.png" target="_blank">
-<img src="https://i.imgur.com/hlCAh04.png" alt="" class="center"> 
+<img src="https://i.imgur.com/hlCAh04.png" alt="" class="center-universal"> 
 </a>
 	
 <comments>
@@ -48,35 +48,35 @@ It lasts for several days. Then the Universe retaliates.</p>
 <p><a href="https://www.facebook.com/LegionOfEternityCCG/">▶ Facebook page</a></p>
 
 <comments>
-<a>Screenshots</a>
+<a>Screenshots 2</a>
 </comments>
 	
 <a href="https://i.imgur.com/XwxC8pi.png" target="_blank">
-<img src="https://i.imgur.com/XwxC8pi.png" alt="" class="center"> 
+<img src="https://i.imgur.com/XwxC8pi.png" alt="" class="center-universal"> 
 </a>
 
 <a href="https://i.imgur.com/FPZhfRB.png" target="_blank">
-<img src="https://i.imgur.com/FPZhfRB.png" alt="" class="center"> 
+<img src="https://i.imgur.com/FPZhfRB.png" alt="" class="center-universal"> 
 </a>
   
 <a href="https://i.imgur.com/kUY7uJw.png" target="_blank">
-<img src="https://i.imgur.com/kUY7uJw.png" alt="" class="center"> 
+<img src="https://i.imgur.com/kUY7uJw.png" alt="" class="center-universal"> 
 </a>
 
 <a href="https://i.imgur.com/5khExUF.png" target="_blank">
-<img src="https://i.imgur.com/5khExUF.png" alt="" class="center"> 
+<img src="https://i.imgur.com/5khExUF.png" alt="" class="center-universal"> 
 </a>
 
 <a href="https://i.imgur.com/tlevD3Z.png" target="_blank">
-<img src="https://i.imgur.com/tlevD3Z.png" alt="" class="center"> 
+<img src="https://i.imgur.com/tlevD3Z.png" alt="" class="center-universal"> 
 </a>
   
 <a href="https://i.imgur.com/2Qf5w44.png" target="_blank">
-<img src="https://i.imgur.com/2Qf5w44.png" alt="" class="center"> 
+<img src="https://i.imgur.com/2Qf5w44.png" alt="" class="center-universal"> 
 </a>
 
 <a href="https://i.imgur.com/nq5eFxa.png" target="_blank">
-<img src="https://i.imgur.com/nq5eFxa.png" alt="" class="center"> 
+<img src="https://i.imgur.com/nq5eFxa.png" alt="" class="center-universal"> 
 </a>
 
 </div><!-- /.blurb -->
