--- a/legion-of-eternity/index.html
+++ b/legion-of-eternity/index.html
@@ -48,7 +48,7 @@ It lasts for several days. Then the Universe retaliates.</p>
 <p><a href="https://www.facebook.com/LegionOfEternityCCG/">▶ Facebook page</a></p>
 
 <comments>
-<a>Screenshots 2</a>
+<a>Artwork</a>
 </comments>
 	
 <a href="https://i.imgur.com/XwxC8pi.png" target="_blank">
