--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -6,13 +6,13 @@ title: Zuurix.com - Magic of Autumn
 	
 <h1>Magic of Autumn</h1>
 	
-<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/embed/TOdRCQnDCg0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/watch?v=ELhIGacIvrE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <comments>
 <a>About the game</a>
 </comments>
 
-<p>Magic of Autumn is a singleplayer card game with an overworld - and everything in the overworld can be turned into cards.</p>
+<p>Magic of Autumn is a singleplayer card game with an overworld - and everything in the overworld can be turned into cards. </p>
 	
 <p><b>Story</b></p>
 	
@@ -22,11 +22,11 @@ Your soul was stolen. You must get it back.</p>
 <p><b>Conjuring</b></p>
 
 <p>The only power that the soulless ones can wield.
-Every object in the game's world can be conjured into cards - idols and wishes that become your guardians and weapons during fights in the Spirit World.</p>
+Every object in the game's world can be conjured into cards - idols and wishes that become your guardians and weapons during fights in the Void Plane.</p>
 	
 <p><b>Combat</b></p>
 
-<p>In the physical plane, you are just a faint shadow. You can only attack in the Spirit World.
+<p>In the physical world, you are just a faint shadow. You can only attack in the Void Plane.
 The combat system is inspired by games like Hearthstone and Magic: The Gathering.
 It's easy to learn for those who are not familiar with the genre and has rule twists to make it interesting for the veterans.</p>
 
@@ -46,28 +46,28 @@ Win fights to break runes and gain access to the new areas of the Island that ar
 <a>Screenshots</a>
 </comments>
 
-<a href="https://i.imgur.com/9w3i75Z.png" target="_blank">
-<img src="https://i.imgur.com/9w3i75Z.png" alt="Pumpkin patch" class="center"> 
+<a href="https://i.imgur.com/8yh3199.png" target="_blank">
+<img src="https://i.imgur.com/8yh3199.png" alt="Pumpkin patch" class="center"> 
 </a>
 	
-<a href="https://i.imgur.com/p74wOvF.png" target="_blank">
-<img src="https://i.imgur.com/p74wOvF.png" alt="Magic barrier" class="center"> 
+<a href="https://i.imgur.com/oyYTsju.png" target="_blank">
+<img src="https://i.imgur.com/oyYTsju.png" alt="Magic barrier" class="center"> 
 </a>
 	
-<a href="https://i.imgur.com/VC1uKUR.png" target="_blank">
-<img src="https://i.imgur.com/VC1uKUR.png" alt="Among the trees" class="center"> 
+<a href="https://i.imgur.com/2W9ptc4.png" target="_blank">
+<img src="https://i.imgur.com/2W9ptc4.png" alt="Among the trees" class="center"> 
 </a>
 	
-<a href="https://i.imgur.com/siQsB5o.png" target="_blank">
-<img src="https://i.imgur.com/siQsB5o.png" alt="Bare branches" class="center"> 
+<a href="https://i.imgur.com/R6W62ZM.png" target="_blank">
+<img src="https://i.imgur.com/R6W62ZM.png" alt="Bare branches" class="center"> 
 </a>
 	
-<a href="https://i.imgur.com/42CrKks.png" target="_blank">
-<img src="https://i.imgur.com/42CrKks.png" alt="Card collection" class="center"> 
-</a>
-	
-<a href="https://i.imgur.com/Z3lTEcX.png" target="_blank">
-<img src="https://i.imgur.com/Z3lTEcX.png" alt="Card battle" class="center"> 
+<a href="https://i.imgur.com/E8PA0nx.png" target="_blank">
+<img src="https://i.imgur.com/E8PA0nx.png" alt="Card battle" class="center"> 
 </a>
 
+<a href="https://i.imgur.com/OOMBsKG.png" target="_blank">
+<img src="https://i.imgur.com/OOMBsKG.png" alt="Card collection" class="center"> 
+</a>
+	
 </div><!-- /.blurb -->
