--- a/magic-of-autumn-presskit/index.html
+++ b/magic-of-autumn-presskit/index.html
@@ -12,7 +12,7 @@ title: Zuurix.com - Magic of Autumn press kit
 <a>Full game description</a>
 </comments>
 
-<p>Magic of Autumn is a singleplayer card game with an overworld - and everything in the overworld can be turned into cards.</p>
+<p>Magic of Autumn is a singleplayer card game with an overworld - and everything in the overworld can be turned into cards. </p>
 	
 <p><b>Story</b></p>
 	
@@ -22,11 +22,11 @@ Your soul was stolen. You must get it back.</p>
 <p><b>Conjuring</b></p>
 
 <p>The only power that the soulless ones can wield.
-Every object in the game's world can be conjured into cards - idols and wishes that become your guardians and weapons during fights in the Spirit World.</p>
+Every object in the game's world can be conjured into cards - idols and wishes that become your guardians and weapons during fights in the Void Plane.</p>
 	
 <p><b>Combat</b></p>
 
-<p>In the physical plane, you are just a faint shadow. You can only attack in the Spirit World.
+<p>In the physical world, you are just a faint shadow. You can only attack in the Void Plane.
 The combat system is inspired by games like Hearthstone and Magic: The Gathering.
 It's easy to learn for those who are not familiar with the genre and has rule twists to make it interesting for the veterans.</p>
 
@@ -40,7 +40,7 @@ Win fights to break runes and gain access to the new areas of the Island that ar
 <a>Trailer</a>
 </comments>
 	
-<iframe width="560" class="center-video" height="315" src="https://www.youtube.com/embed/TOdRCQnDCg0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" class="center-video" height="315" src="https://www.youtube.com/watch?v=ELhIGacIvrE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <comments>
 <a>Developer</a>
