--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -6,7 +6,7 @@ title: Zuurix.com - Magic of Autumn
 	
 <h1>Magic of Autumn</h1>
 	
-<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/watch?v=ELhIGacIvrE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ELhIGacIvrE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <comments>
 <a>About the game</a>
