--- a/magic-of-autumn-presskit/index.html
+++ b/magic-of-autumn-presskit/index.html
@@ -40,7 +40,7 @@ Win fights to break runes and gain access to the new areas of the Island that ar
 <a>Trailer</a>
 </comments>
 	
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ELhIGacIvrE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/embed/ELhIGacIvrE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <comments>
 <a>Developer</a>
