--- a/legion-of-eternity-presskit/index.html
+++ b/legion-of-eternity-presskit/index.html
@@ -12,32 +12,40 @@ title: Zuurix.com - Legion of Eternity press kit
 <a>Full game description</a>
 </comments>
 
-<p>Legion of Eternity is a story-driven card game with a setting that combines science fiction and cosmic horror.</p>
+<p>Legion of Eternity is a singleplayer-focused story-driven card game that merges science fiction and cosmic horror to tell an epic, dark story.</p>
+	
+<p>We did something horrible. A mistake.
+I cannot tell what we did. I can only try to describe what happened after.
+First, it was the 26th century. Then it was the 26th century again. And again. And again.
+Until it wasn't anymore, and we became what we weren't, adapted to the new, complex existence.
+</p>
 
-<p><b>Story</b></p>
+<p>We are being punished.
+The reality has turned into a nightmare. It's full of monsters, errors, traps.
+It's eroding our sanity.</p>
 
-<p>It is the 26th century. A science breakthrough of potentially limitless importance gives humanity the complete control of the Universe.
-It lasts for several days. Then the Universe retaliates.</p>
+<p>Some of us think that we deserve it, that we should stop resisting.
+Some of us can't think anymore, at least not in a way that I could describe.
+</p>
+	
+<p>I think we should keep fighting.</p>
+	
+<p>The Protectorate with their spaceships, soldiers, and weapons of mass destruction have the right idea.
+Annihilate monsters, try to simulate social connections, try to remember who we were, cling to what made us human.</p>
 
-<p>Earth becomes a singularity. Insanity spreads through minds like a virus. Everything changes.</p>
+<p>But it's not enough, the nightmare always wins.
+The reality will keep making horrors greater than our strength. It's proportional to our resistance.</p>
 
-<p>Those who survive begin a desperate war against the reality itself.</p>
+<p>I need to find a solution while I still can.</p>
 
-<p><b>Card customization</b></p>
+<p>I remember something about what I did.
+There is something that lurks beyond all of the complexities.</p>	
 
-<p>Change card frames, skills, stats.</p>
-
-<p><b>Strategic battles</b></p>
-
-<p>Send units, summon structures, and execute actions to win turn-based card battles.</p>
-
-<p><b>Crafting and looting</b></p>
-
-<p>Obtain cards and card customization items from crafting and battle rewards.</p>
-
-<p><b>Over ten hours of content</b></p>
-
-<p>Story campaign, hundreds of battles, over fifty cards to obtain.</p>
+<p>I have created you to find old machines and arrays.
+To do one last thing before we become infinite.
+</p>
+	
+<p>They have to know.</p>
  
 <comments>
 <a>Developer</a>
