--- a/legion-of-eternity/index.html
+++ b/legion-of-eternity/index.html
@@ -16,7 +16,7 @@ title: Zuurix.com - Legion of Eternity
 
 <p>Legion of Eternity is a singleplayer-focused story-driven card game that merges science fiction and cosmic horror to tell an epic, dark story.</p>
 	
-<p>We did something horrible. A mistake.
+<i><p>We did something horrible. A mistake.
 I cannot tell what we did. I can only try to describe what happened after.
 First, it was the 26th century. Then it was the 26th century again. And again. And again.
 Until it wasn't anymore, and we became what we weren't, adapted to the new, complex existence.
@@ -47,7 +47,7 @@ There is something that lurks beyond all of the complexities.</p>
 To do one last thing before we become infinite.
 </p>
 	
-<p>They have to know.</p>
+<p>They have to know.</p></i>
 
 <comments>
 <a>Links</a>
