--- a/games/index.html
+++ b/games/index.html
@@ -13,7 +13,7 @@ title: Zuurix.com - Games
 	
 	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/LOTLW/LOTLW%20Small%20Logo.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
-	<p>Light of the Locked World is a fantasy RPG inspired by old school MMOs like Ultima Online and RuneScape.</p>	
+	<p>Light of the Locked World is an ambitious RPG inspired by old school MMOs like Ultima Online and RuneScape.</p>	
 	
 	<ul style="margin-bottom: 155px; list-style-type: none;">
 	<li><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/" target="_blank">▶ View on Steam</a></li>
@@ -41,7 +41,7 @@ title: Zuurix.com - Games
 	
 	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/magic_of_autumn/images/Square%20logo.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
-	<p>Magic of Autumn is a CCG with an overworld - and everything in the overworld can be turned into a card!</p>	
+	<p>Magic of Autumn is a card game with an overworld - and everything in the overworld can be turned into a card.</p>	
 	
 	<ul style="margin-bottom: 155px; list-style-type: none;">
 	<li><a href="https://store.steampowered.com/app/1184450/Magic_of_Autumn/" target="_blank">▶ View on Steam</a></li>
@@ -55,7 +55,7 @@ title: Zuurix.com - Games
 	
 	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/loe-images/Induction%20square.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
-	<p>Legion of Eternity is a story-driven card game with a setting that combines science fiction and cosmic horror.</p>	
+	p>Legion of Eternity is a singleplayer-focused story-driven card game that merges science fiction and cosmic horror.</p>	
 	
 	<ul style="margin-bottom: 178px; list-style-type: none;">
 	<li><a href="https://zuurix.com/legion-of-eternity/">▶ About the game</a></li>
