--- a/games/index.html
+++ b/games/index.html
@@ -55,7 +55,7 @@ title: Zuurix.com - Games
 	
 	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/loe-images/Induction%20square.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
-	p>Legion of Eternity is a singleplayer-focused story-driven card game that merges science fiction and cosmic horror.</p>	
+	<p>Legion of Eternity is a singleplayer-focused story-driven card game that merges science fiction and cosmic horror.</p>	
 	
 	<ul style="margin-bottom: 178px; list-style-type: none;">
 	<li><a href="https://zuurix.com/legion-of-eternity/">▶ About the game</a></li>
