--- a/games/index.html
+++ b/games/index.html
@@ -53,7 +53,7 @@ title: Zuurix.com - Games
 	<a>Legion of Eternity</a>
 	</comments>
 	
-	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/loe-images/Induction%20square.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/loe-images/LOE%20Logo%20Square.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
 	<p>Legion of Eternity is a singleplayer-focused story-driven card game that merges science fiction and cosmic horror.</p>	
 	
