--- a/legion-of-eternity/index.html
+++ b/legion-of-eternity/index.html
@@ -6,8 +6,8 @@ title: Zuurix.com - Legion of Eternity
 	
 <h1>Legion of Eternity</h1>
 	
-<a href="https://i.imgur.com/hlCAh04.png" target="_blank">
-<img src="https://i.imgur.com/hlCAh04.png" alt="" class="center-universal"> 
+<a href="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/loe-images/LOE%20Logo%20Square.png" target="_blank">
+<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/loe-images/LOE%20Logo%20Square.png" alt="" class="center-universal"> 
 </a>
 	
 <comments>
