--- a/legion-of-eternity/index.html
+++ b/legion-of-eternity/index.html
@@ -6,7 +6,7 @@ title: Zuurix.com - Legion of Eternity
 	
 <h1>Legion of Eternity</h1>
 	
-<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/loe-images/LOE%20Logo%20Header.png" alt="" class="center-universal"> 
+<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/loe-images/LOE%20Logo%20Header%20V2.png" alt="" class="center-universal"> 
 	
 <comments>
 <a>About the game</a>
