--- a/other-games/index.html
+++ b/other-games/index.html
@@ -72,7 +72,7 @@ title: Zuurix.com - Other games
 <a>Armored Constellations</a>
 </comments>	
 	
-<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Old%20game%20archive%20image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/AC%20image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
 <p>Armored Constellations is a small looter shooter.</p>	
 	
@@ -84,7 +84,7 @@ title: Zuurix.com - Other games
 <a>Song of Wrath</a>
 </comments>	
 	
-<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Old%20game%20archive%20image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/SOW%20image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
 <p>Song of Wrath is a bullet hell RPG made under 12 hours.</p>	
 	
@@ -96,7 +96,7 @@ title: Zuurix.com - Other games
 <a>Mortal Symbols</a>
 </comments>	
 	
-<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Old%20game%20archive%20image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/MS%20image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
 <p>Mortal Symbols is a small CCG made under 48 hours.</p>	
 	
