--- a/magic-of-autumn-presskit/index.html
+++ b/magic-of-autumn-presskit/index.html
@@ -59,7 +59,7 @@ Win fights to break runes and gain access to the new areas of the Island that ar
 	
 <ul style="list-style-type:none">
 
-<li>Currently unavailable</li>
+<li>Steam: https://store.steampowered.com/app/1184450/Magic_of_Autumn/</li>
 </ul>
 	
 <comments>
@@ -68,7 +68,7 @@ Win fights to break runes and gain access to the new areas of the Island that ar
 	
 <ul style="list-style-type:none">
 
-<li>Beta</li>
+<li>Completed</li>
 
 </ul>
 	
