--- a/lotlw-beta/index.html
+++ b/lotlw-beta/index.html
@@ -6,9 +6,9 @@ title: Zuurix.com - Light of the Locked World
 	
 <h1>Light of the Locked World beta testing</h1>
 
-<p>Become a beta tester: Get access to the Light of the Locked World full version</p>
+<p>Become a beta tester: Get access to the Light of the Locked World full version and earn a permanent key!</p>
 
-<p>Requires: Steam</>
+<p>Requires: Steam</b>
 
 <comments>
 <a>Instructions</a>
@@ -17,4 +17,4 @@ title: Zuurix.com - Light of the Locked World
 <p>Step 1: Fill this form.</p>
 <p>Step 2: Activate beta test key on Steam.</p>
 <p>Step 3: Play the game!</p>
-<p>Step 4: Fill feedback form to recieve a permanent key!</p
+<p>Step 4: Fill feedback form to recieve a permanent key!</p>
