--- a/lotlw-beta/index.html
+++ b/lotlw-beta/index.html
@@ -8,13 +8,13 @@ title: Zuurix.com - Light of the Locked World
 
 <p>Become a beta tester: Get access to the Light of the Locked World full version and earn a permanent key!</p>
 
-<p>Requires: Steam</b>
+<p>Requires: Steam</p>
 
 <comments>
 <a>Instructions</a>
 </comments>
 
-<p>Step 1: Fill this form.</p>
+<p>Step 1: <a href="https://docs.google.com/forms/d/e/1FAIpQLSd4MJi1eemVWEXN2-8KzGu_Y87l9_FhSchfS_DAPSXo0-XqDw/" target="_blank">Fill this form</a></p>
 <p>Step 2: Activate beta test key on Steam.</p>
 <p>Step 3: Play the game!</p>
-<p>Step 4: Fill feedback form to recieve a permanent key!</p>
+<p>Step 4: <a href="https://docs.google.com/forms/d/1oFD7N60NgrB4vSFnX9_e0yHEt_AFYG9RZJK7ZslJ8_k/" target="_blank">Fill feedback form to get a permanent key!</a></p>
