--- a/lotlw-beta/index.html
+++ b/lotlw-beta/index.html
@@ -14,7 +14,7 @@ title: Zuurix.com - Light of the Locked World
 <a>Instructions</a>
 </comments>
 
-<p>Step 1: <a href="https://docs.google.com/forms/d/e/1FAIpQLSd4MJi1eemVWEXN2-8KzGu_Y87l9_FhSchfS_DAPSXo0-XqDw/" target="_blank">Fill this form</a></p>
+<p>Step 1: <a href="https://docs.google.com/forms/d/e/1FAIpQLSd4MJi1eemVWEXN2-8KzGu_Y87l9_FhSchfS_DAPSXo0-XqDw/" target="_blank">Fill this form >></a></p>
 <p>Step 2: Get the beta test key and activate it on Steam.</p>
 <p>Step 3: Play the game!</p>
-<p>Step 4: <a href="https://docs.google.com/forms/d/1oFD7N60NgrB4vSFnX9_e0yHEt_AFYG9RZJK7ZslJ8_k/" target="_blank">Fill feedback form to get a permanent key!</a></p>
+<p>Step 4: <a href="https://docs.google.com/forms/d/1oFD7N60NgrB4vSFnX9_e0yHEt_AFYG9RZJK7ZslJ8_k/" target="_blank">Fill feedback form to get a permanent key >></a></p>
