--- a/lotlw-beta/index.html
+++ b/lotlw-beta/index.html
@@ -4,6 +4,8 @@ title: Zuurix.com - Light of the Locked World
 ---
 <div class="blurb">
 	
+<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/LOTLW-images/LOTLW%20Logo%20Etalon%20640x640.png" alt="" class="center-universal"> 
+	
 <h1>Light of the Locked World beta testing</h1>
 
 <p>Become a beta tester: Get access to the Light of the Locked World full version and earn a permanent key!</p>
