--- a/lotlw-beta/index.html
+++ b/lotlw-beta/index.html
@@ -9,13 +9,16 @@ title: Zuurix.com - Light of the Locked World
 <img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/LOTLW-images/LOTLW%20Beta%20image.png" alt="" class="center-universal"> 
 
 <comments>
-<a>Instructions</a>
+<a>About</a>
 </comments>
 	
 <p>Become a beta tester: Get access to the Light of the Locked World full version and earn a permanent key!</p>
-
 <p>Requires: Steam</p>
 
+<comments>
+<a>Instructions</a>
+</comments>
+	
 <p>Step 1: <a href="https://docs.google.com/forms/d/e/1FAIpQLSd4MJi1eemVWEXN2-8KzGu_Y87l9_FhSchfS_DAPSXo0-XqDw/" target="_blank">Fill this form >></a></p>
 <p>Step 2: Get the beta test key and activate it on Steam.</p>
 <p>Step 3: Play the game!</p>
