--- a/lotlw-beta/index.html
+++ b/lotlw-beta/index.html
@@ -22,4 +22,4 @@ title: Zuurix.com - Light of the Locked World
 <p>Step 1: <a href="https://docs.google.com/forms/d/e/1FAIpQLSd4MJi1eemVWEXN2-8KzGu_Y87l9_FhSchfS_DAPSXo0-XqDw/viewform?usp=sf_link" target="_blank">Fill this form >></a></p>
 <p>Step 2: Get the beta test key and activate it on Steam.</p>
 <p>Step 3: Play the game!</p>
-<p>Step 4: <a href="https://docs.google.com/forms/d/e/1FAIpQLSe-etdvRfKYJXbsHdJmsGDNIzPEXcZ_xcB9xIOC3bLvRxb0pw/viewform?usp=sf_link" target="_blank">Fill feedback form to get a permanent key >></a></p>
+<p>Step 4: <a href="https://docs.google.com/forms/d/e/1FAIpQLSe-etdvRfKYJXbsHdJmsGDNIzPEXcZ_xcB9xIOC3bLvRxb0pw/viewform?usp=sf_link" target="_blank">Fill the feedback form to get a permanent key >></a></p>
