--- a/light-of-the-locked-world-presskit/index.html
+++ b/light-of-the-locked-world-presskit/index.html
@@ -12,30 +12,59 @@ title: Zuurix.com - Light of the Locked World press kit
 <a>Full game description</a>
 </comments>
 
-<p>Light of the Locked World is an ambitious fantasy RPG with local multiplayer, inspired by old school MMOs like RuneScape and Ultima Online.</p>
+<p>Light of the Locked World is an ambitious RPG with local multiplayer, inspired by oldschool MMOs.</p>
 
-<p><b>Story</b></p>
+<p><i>Planned features:</i></p>
 
-<p>The Locked World is uncivilized, chaotic, and ravaged by a recent war. A world where everyone is capable of controlling magic. A world infested by demons and roamed by criminals.
-You get thrown in the middle of it all, without a way to escape.
-Start a new life, become powerful, and stand against the insidious evil that permeates everything here.</p>
+<p><b>Role-based progression system inspired by systems found in RuneScape, Skyrim, Ultima Online, and other games</b></p>
 
-<p><b>Features</b></p>
+<p>Gain experience in ten roles, level up, gain points, and spend them to unlock perks in role perk trees.
+Your character is unrestricted by classes but remains unique as you cannot master everything.</p>
 
-<p>The game is built to be a true RPG with all of the beloved features:
-Role leveling system, sophisticated equipment system, faction reputation system, complex quests, detailed lore, spells, and more - you won't be disappointed.</p>
+<p><b>An uncommon setting</b></p>
 
-<p><b>Multiplayer</b></p>
+<p>The game is set in a world that is a manifestation of ideas from western and high fantasy genres.</p>
 
-<p>Invite another player to play with or against you.
-You have the freedom to compete for rare items, cooperate to overcome difficult tasks, fight for the control of key locations, steal, trade, duel... No feature is excluded.</p>
+<p><b>Slowly unfolding story</b></p>
+
+<p>The nature of the story demands an approach that does not feature a grand opening, prophecies, or a player character with unusual powers.
+Involuntarily become a citizen of the Locked World, attempt to start a new life here, and become entangled in the vast conspiracy.</p>
+
+<p><b>Authentic non-player characters</b></p>
+
+<p>All human non-player characters - NPCs - are almost identical to player characters.
+There are many similarities, but the most important one is that NPCs have inventories that they can fully utilize - use healing consumables from them, equip weapons and armor, even pick up items.</p>
+
+<p><b>Faction reputation system</b></p>
+
+<p>Your actions will often change your reputation, which will change how characters will react.
+High reputation unlocks such benefits as faction-exclusive merchants and items, while low reputation makes faction NPCs aggressive and uncooperative.</p>
+
+<p><b>Persistence</b></p>
+
+<p>Your actions will often make permanent changes to the game's world.
+Looted treasure chests remain empty, mortal characters die forever, resources are non-renewable.</p>
+
+<p><b>Asymmetry</b></p>
+
+<p>Most numbers in the game are chosen to make the game slightly asymmetric.
+This creates interesting situations, unpredictability, and rewards for an invested player.</p>
+
+<p><b>Local multiplayer mode</b></p>
+
+<p>All of the above works in the game's drop-in drop-out local splitscreen mode!
+The game allows two players not only to cooperate but also to play competitively - duel, compete for rare resources and items, use the reputation system to divide the world.</p>
+
+<p><b>A bouquet of classic features</b></p>
+
+<p>Quests with cutscenes and dialogue, character appearance customization, sophisticated equipment system, crafting, trading, traps, books, spells, cities, secrets, and so on.</p>
 	
 <comments>
 <a>Trailer</a>
 </comments>
 	
-<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/embed/GshSJHrOVe0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	
+<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/embed/4e3CaMEes7Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+
 <comments>
 <a>Developer</a>
 </comments>
@@ -52,8 +81,7 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 </comments>
 	
 <ul style="list-style-type:none">
-
-<li>Pre-alpha demo available on GameJolt, Itch.io, Steam</li>
+<li>Alpha demo available on GameJolt, Itch.io, Steam</li>
 </ul>
 	
 <comments>
@@ -62,7 +90,7 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 	
 <ul style="list-style-type:none">
 
-<li>Pre-Alpha</li>
+<li>Alpha</li>
 
 </ul>
 	
