--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -69,16 +69,16 @@ The game allows two players not only to cooperate but also to play competitively
 <a>Screenshots</a>
 </comments>
 	
-<a href="" target="_blank">
-<img src="" alt="" class="center"> 
+<a href="https://i.imgur.com/Ytol7Yy.png" target="_blank">
+<img src="https://i.imgur.com/Ytol7Yy.png" alt="" class="center"> 
 </a>
 	
-<a href="" target="_blank">
-<img src="" alt="" class="center"> 
+<a href="https://i.imgur.com/0CrwkCp.png" target="_blank">
+<img src="https://i.imgur.com/0CrwkCp.png" alt="" class="center"> 
 </a>
 
-<a href="" target="_blank">
-<img src="" alt="" class="center"> 
+<a href="https://i.imgur.com/Pow6C33.png" target="_blank">
+<img src="https://i.imgur.com/Pow6C33.png" alt="" class="center"> 
 </a>
 	
 </div><!-- /.blurb -->
