--- a/games/index.html
+++ b/games/index.html
@@ -13,7 +13,7 @@ title: Zuurix.com - Games
 	
 	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/LOTLW/LOTLW%20Small%20Logo.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
-	<p>Light of the Locked World is an ambitious RPG inspired by old school MMOs like Ultima Online and RuneScape.</p>	
+	<p>Light of the Locked World is an ambitious RPG with local multiplayer, inspired by oldschool MMOs.</p>	
 	
 	<ul style="margin-bottom: 155px; list-style-type: none;">
 	<li><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/" target="_blank">▶ View on Steam</a></li>
