--- a/games/index.html
+++ b/games/index.html
@@ -25,7 +25,7 @@ title: Zuurix.com - Games
 	<a>Sector Six</a>
 	</comments>	
 	
-    	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+    	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/944x944.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
     	
 	<p>Sector Six is a side-scrolling sci-fi shooter with silhouette aesthetic, procedural loot and extensive customization.</p>	
 	
