--- a/about/index.html
+++ b/about/index.html
@@ -7,11 +7,10 @@ title: Zuurix.com - About
 <h1>About</h1>
 	
 <p>Hello!</p>
-<p>I am Aivaras Klimas a.k.a. Zuurix, an indie game developer.</p>
-
-<p>I was introduced to video games when I was 10 years old and since then I am extremely passionate about them.</p>
-<p>I played them, I made sketches of them, I learned about them, and ended up developing them =]</p>
-
+<p>I am Aivaras Klimas a.k.a. Zuurix, an indie game developer from Lithuania.</p>
+	
+<p>I love developing games with procedural generation, character customization, and rich worlds - looters, RPGs, CCGs.
+	
 <p>In September 2013 I have completed several online JavaScript lessons, downloaded GameMaker engine and month later I had my first real game done.</p>
 
 <p>After that I've been making games nonstop.</p>
@@ -19,12 +18,12 @@ title: Zuurix.com - About
 <p>My first serious commercial game – Sector Six – was released on May 2016 as a Steam Early Access title.</p>
 <p>In September 2018 it has left Early Access and currently, Sector Six is my most successful game.</p>
 
-<p>Right now I am working on Light of the Locked World - an RPG inspired by old school MMOs like Ultima Online and RuneScape.</p>
+<p>Right now I am working on Light of the Locked World - a role-playing game.</p>
 
 <comments>
 <a>Contact me</a>
 </comments>
 	
-<p>Email: <i>zuurix@protonmail.com</i></p>
+<p>Email: <i>zuurixgames@gmail.com</i></p>
 
 </div><!-- /.blurb -->
