--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@ title: Zuurix.com - About
 <p>Hello!</p>
 <p>I am Aivaras Klimas a.k.a. Zuurix, an indie game developer from Lithuania.</p>
 	
-<p>I love developing games with procedural generation, character customization, and rich worlds - looters, RPGs, CCGs.
+<p>I love developing games with procedural generation, character customization, and rich worlds - looters, role-playing games, card games.
 	
 <p>In September 2013 I have completed several online JavaScript lessons, downloaded GameMaker engine and month later I had my first real game done.</p>
 
