--- a/other-games/index.html
+++ b/other-games/index.html
@@ -67,6 +67,18 @@ title: Zuurix.com - Other games
 <ul style="list-style-type:none; margin-bottom: 202px;">
 <li><a href="https://zuurix.itch.io/battle-for-17" target="_blank">▶ Download</a></li>
 </ul>
+	
+<comments>
+<a>ULTMTCMBT</a>
+</comments>	
+	
+<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Website%20image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+    	
+<p>ULTMTCMBT is a shoot 'em up made in about 8 hours, started as an entry to 10² Jam.</p>	
+	
+<ul style="list-style-type:none; margin-bottom: 202px;">
+<li><a href="https://zuurix.itch.io/ultmtcmbt" target="_blank">▶ Download</a></li>
+</ul>
 
 <comments>
 <a>Armored Constellations</a>
