--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -12,52 +12,19 @@ title: Zuurix.com - Light of the Locked World
 <a>About the game</a>
 </comments>
 
-<p>Light of the Locked World is an ambitious RPG with local multiplayer, inspired by oldschool MMOs.</p>
+p><b>Light of the Locked World</b> is a role-playing game in which a portal malfunction takes you to the world of Kayos. Unable to return home, you have to start a new life and face challenges that will redefine you.</p>
 
-<p><i>Planned features:</i></p>
+<p><b>Planned features:</b></p>
 
-<p><b>Role-based progression system inspired by systems found in RuneScape, Skyrim, Ultima Online, and other games</b></p>
+<p><b>Slowly unfolding story:</b> Survive a rough introduction to an unfamiliar world, try to find your place in it, and become entangled in the vast conspiracy.</p>
 
-<p>Gain experience in ten roles, level up, gain points, and spend them to unlock perks in role perk trees.
-Your character is unrestricted by classes but remains unique as you cannot master everything.</p>
+<p><b>You are not special:</b> No prophecies, no strange powers. This extends to mechanics - player and non-player characters are almost identical.</p>
 
-<p><b>An uncommon setting</b></p>
+<p><b>Open and atmospheric fantasy world:</b> Become a citizen of a world with a short history, coastal mining cities, developing democracy, magic-powered industry, lawless wastelands, infested ruins, and so much more.</p>
 
-<p>The game is set in a world that is a manifestation of ideas from western and high fantasy genres.</p>
+<p><b>Persistence:</b> Your actions will make permanent changes to the world. Looted treasure chests never refill with goods, mortal characters die forever, resources are non-renewable.</p>
 
-<p><b>Slowly unfolding story</b></p>
-
-<p>The nature of the story demands an approach that does not feature a grand opening, prophecies, or a player character with unusual powers.
-Involuntarily become a citizen of the Locked World, attempt to start a new life here, and become entangled in the vast conspiracy.</p>
-
-<p><b>Authentic non-player characters</b></p>
-
-<p>All human non-player characters - NPCs - are almost identical to player characters.
-There are many similarities, but the most important one is that NPCs have inventories that they can fully utilize - use healing consumables from them, equip weapons and armor, even pick up items.</p>
-
-<p><b>Faction reputation system</b></p>
-
-<p>Your actions will often change your reputation, which will change how characters will react.
-High reputation unlocks such benefits as faction-exclusive merchants and items, while low reputation makes faction NPCs aggressive and uncooperative.</p>
-
-<p><b>Persistence</b></p>
-
-<p>Your actions will often make permanent changes to the game's world.
-Looted treasure chests remain empty, mortal characters die forever, resources are non-renewable.</p>
-
-<p><b>Asymmetry</b></p>
-
-<p>Most numbers in the game are chosen to make the game slightly asymmetric.
-This creates interesting situations, unpredictability, and rewards for an invested player.</p>
-
-<p><b>Local multiplayer mode</b></p>
-
-<p>All of the above works in the game's drop-in drop-out local splitscreen mode!
-The game allows two players not only to cooperate but also to play competitively - duel, compete for rare resources and items, use the reputation system to divide the world.</p>
-
-<p><b>A bouquet of classic features</b></p>
-
-<p>Quests with cutscenes and dialogue, character appearance customization, sophisticated equipment system, crafting, trading, traps, books, spells, cities, secrets, and so on.</p>
+<p><b>Play together:</b> The game has a drop-in drop-out local multiplayer mode for two players. Allows to cooperate or compete, does not require controllers.</p>
 	
 <comments>
 <a>Links</a>
