--- a/other-games/index.html
+++ b/other-games/index.html
@@ -55,7 +55,19 @@ title: Zuurix.com - Other games
 <ul style="list-style-type:none; margin-bottom: 202px;">
 <li><a href="https://zuurix.itch.io/avalirs-quest" target="_blank">▶ Download</a></li>
 </ul>	
-
+	
+<comments>
+<a>Traincopter Genesis</a>
+</comments>
+	
+<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/TG%20homepage.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+    	
+<p>A small action-arcade game in which you have to defend a train. Made in about 10 hours, started as an entry for 10² jam.</p>	
+	
+<ul style="list-style-type:none; margin-bottom: 202px;">
+<li><a href="https://zuurix.itch.io/traincopter-genesis" target="_blank">▶ Download</a></li>
+</ul>	
+	
 <comments>
 <a>Battle for '17</a>
 </comments>	
