--- a/legion-of-eternity/index.html
+++ b/legion-of-eternity/index.html
@@ -12,38 +12,34 @@ title: Zuurix.com - Legion of Eternity
 <a>About the game</a>
 </comments>
 
-<p>Legion of Eternity is a singleplayer-focused story-driven card game that merges science fiction and cosmic horror to tell an epic, dark story.</p>
+<p>Legion of Eternity is a singleplayer-focused story-driven card game that merges science fiction and cosmic horror to tell a twisted story.</p>
 	
 <i><p>We did something horrible. A mistake.
-I cannot tell what we did. I can only try to describe what happened after.
+I cannot tell you what we did. I can only try to describe what happened after.
 First, it was the 26th century. Then it was the 26th century again. And again. And again.
 Until it wasn't anymore, and we became what we weren't, adapted to the new, complex existence.
 </p>
 
-<p>We are being punished.
-The reality has turned into a nightmare. It's full of monsters, errors, traps.
-It's eroding our sanity.</p>
+<p>Before the change, we could use our tools and knowledge to glimpse into the world that is beyond our senses.
+Fractals. Incomprehensible dimensions. Causality and parity violations.</p>
 
-<p>Some of us think that we deserve it, that we should stop resisting.
-Some of us can't think anymore, at least not in a way that I could describe.
-</p>
-	
-<p>I think we should keep fighting.</p>
+<p>The universe used to exist on the edge of that infinitely grander existence. Now it has been plunged right into it.
+Reality is no longer comprehensible for a sane mind.</p>
+
+<p>Those shreds of sanity that some of us retain is eroding as time goes on. Many of us have given up. I didn't. I think we should keep fighting.</p>
 	
 <p>The Protectorate with their spaceships, soldiers, and weapons of mass destruction have the right idea.
-Annihilate monsters, try to simulate social connections, try to remember who we were, cling to what made us human.</p>
+Annihilate monsters, try to simulate normalcy, try to remember who we were, cling to what made us human.</p>
 
-<p>But it's not enough, the nightmare always wins.
-The reality will keep making horrors greater than our strength. It's proportional to our resistance.</p>
+<p>It's not enough. Before the change we were the lords of existence, we controlled space and time, we were larger than it. But the new reality is infinite orders of magnitude greater. We will not win against it.</p>
 
 <p>I need to find a solution while I still can.</p>
 
 <p>I remember something about what I did.
-There is something that lurks beyond all of the complexities.</p>	
+There is something that lurks beyond everything, beyond maimed causality.</p>	
 
 <p>I have created you to find old machines and arrays.
-To do one last thing before we become infinite.
-</p>
+To do one last thing before we become infinite.</p>
 	
 <p>They have to know.</p></i>
 
