--- a/legion-of-eternity/index.html
+++ b/legion-of-eternity/index.html
@@ -12,7 +12,7 @@ title: Zuurix.com - Legion of Eternity
 <a>About the game</a>
 </comments>
 
-<p>Legion of Eternity is a singleplayer-focused story-driven card game that merges science fiction and cosmic horror to tell a twisted story.</p>
+<p>Legion of Eternity is a singleplayer-focused story-driven card game that merges science fiction and cosmic horror to tell a dark story.</p>
 	
 <i><p>We did something horrible. A mistake.
 I cannot tell you what we did. I can only try to describe what happened after.
