--- a/legion-of-eternity-presskit/index.html
+++ b/legion-of-eternity-presskit/index.html
@@ -11,6 +11,8 @@ title: Zuurix.com - Legion of Eternity press kit
 <comments>
 <a>Full game description</a>
 </comments>
+	
+<p>Legion of Eternity is a singleplayer-focused story-driven card game that merges science fiction and cosmic horror to tell a dark story.</p>
 
 <i><p>We did something horrible. A mistake.
 I cannot tell you what we did. I can only try to describe what happened after.
