--- a/games/index.html
+++ b/games/index.html
@@ -27,7 +27,7 @@ title: Zuurix.com - Games
 	
     	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/944x944.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
     	
-	<p>Sector Six is a side-scrolling sci-fi shooter with silhouette aesthetic, procedural loot and extensive customization.</p>	
+	<p>Sector Six is a side-scrolling sci-fi shooter with silhouette aesthetic, procedural loot, and extensive customization.</p>	
 	
 	<ul style="margin-bottom: 155px; list-style-type: none;">
 	<li><a href="https://store.steampowered.com/app/465020/Sector_Six/" target="_blank">▶ Get from Steam</a></li>
