--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Zuurix.com - Home
 	
 <h1>Home</h1>
 	
-<p>Welcome to a personal website of game developer Zuurix!</p>
+<p>Welcome to a personal website of a game developer Zuurix!</p>
 	
 <comments>
 <a>News</a>
