--- a/legion-of-eternity/index.html
+++ b/legion-of-eternity/index.html
@@ -12,33 +12,19 @@ title: Zuurix.com - Legion of Eternity
 <a>About the game</a>
 </comments>
 
-<p>Legion of Eternity is a singleplayer-focused story-driven card game that merges science fiction and cosmic horror to tell a dark story.</p>
+<p>Legion of Eternity is a card game with deep customization, procedurally generated loot, and a story of cosmic horror.
+After apocalyptic cataclysm violates causality, a legion of mutants and machines are sent wake an array of technology - the only thing that could save what remains.</p>
 	
-<i><p>We did something horrible. A mistake.
-I cannot tell you what we did. I can only try to describe what happened after.
-First, it was the 26th century. Then it was the 26th century again. And again. And again.
-Until it wasn't anymore, and we became what we weren't, adapted to the new, complex existence.
-</p>
+<i><p>We did something horrible. Something indescribable.</p>
 
-<p>Before the change, we could use our tools and knowledge to glimpse into the world that is beyond our senses.
-Fractals. Incomprehensible dimensions. Causality and parity violations.</p>
+<p>The universe used to exist on the edge of that infinitely grander existence. Now it has been plunged right into it.</p>
 
-<p>The universe used to exist on the edge of that infinitely grander existence. Now it has been plunged right into it.
-Reality is no longer comprehensible for a sane mind.</p>
-
-<p>Those shreds of sanity that some of us retain is eroding as time goes on. Many of us have given up. I didn't. I think we should keep fighting.</p>
-	
-<p>The Protectorate with their spaceships, soldiers, and weapons of mass destruction have the right idea.
-Annihilate monsters, try to simulate normalcy, try to remember who we were, cling to what made us human.</p>
-
-<p>It's not enough. Before the change we were the lords of existence, we controlled space and time, we were larger than it. But the new reality is infinite orders of magnitude greater. We will not win against it.</p>
-
-<p>I need to find a solution while I still can.</p>
+<p>Time is broken and we don't have much of it left. I need to find a solution while I still can.</p>
 
 <p>I remember something about what I did.
 There is something that lurks beyond everything, beyond maimed causality.</p>	
 
-<p>I have created you to find old machines and arrays.
+<p>I have created you to activate the remnants of our great and terrible science.
 To do one last thing before we become infinite.</p>
 	
 <p>They have to know.</p></i>
