--- a/legion-of-eternity/index.html
+++ b/legion-of-eternity/index.html
@@ -13,19 +13,18 @@ title: Zuurix.com - Legion of Eternity
 </comments>
 
 <p>Legion of Eternity is a card game with deep customization, procedurally generated loot, and a story of cosmic horror.
-After apocalyptic cataclysm violates causality, a legion of mutants and machines are sent wake an array of technology, the only thing that could save what remains.</p>
+After apocalyptic cataclysm violates causality, a horde of mutants and machines is sent to wake the only thing that could save what remains.</p>
 	
 <i><p>We did a horrible mistake. An indescribable mistake. The Universe used to exist on the edge of an infinitely grander existence.</p>
 
-<p>we have plunged it right into that abyss.</p>
+<p>We have plunged it right into that abyss.</p>
 
 <p>Our time is limited. I need to find a solution while I still can.</p>
 
 <p>I remember something about what I did.
 There is something that lurks beyond everything, beyond what we considered to be real.</p>	
 
-<p>I have created you to activate the remnants of a great science.
-To do one last thing before we become infinite.</p>
+<p>I have created you to activate the remnants of greatness. To do one last thing before we become infinite.</p>
 	
 <p>They have to know.</p></i>
 
